# iucnredlistpy

./: .gitignore  .ty.toml  LICENSE  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: main.yml
src/iucnredlistpy/: __init__.py  assessment.py  client.py  constants.py  resource.py  taxa.py
tests/: test_assessment.py  test_client.py  test_taxa.py
