[project]
name = "iucnredlistpy"
version = "0.1.0"
description = "IUCN Red List Python package"
readme = "README.md"
authors = [
    { name = "Simon Tarr", email = "simon.tarr@iucn.org" },
    { name = "Ian Townsend", email = "ian.townsend@iucn.org" }
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
    "requests-mock>=1.12.1",
    "ruff>=0.11.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
